# Node-Server/server.js
@@ -25,34 +25,34 @@ const swaggerDocument = JSON.parse(fs.readFileSync(swaggerPath, "utf8"));
 app.use("/api/docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 /* Get all valid museumIDs and museum metadata */
-app.get("/api/museums", getMuseumNames);
-app.get("/api/:museumID/rooms", getRoomNames);
+app.get("/api/museums", getMuseumNames);//
+app.get("/api/:museumID/rooms", getRoomNames);//
 
 /* Check login details for a curator */
-app.post("/api/:museumID/authenticate", validateCuratorLogin)
+app.post("/api/:museumID/authenticate", validateCuratorLogin)//
 
 /* CRUD Functions for Creating Curator Panels */
-app.get("/api/:museumID/:roomID/panel", getCuratorPanels)
-app.post("/api/:museumID/:roomID/panel", createNewCuratorPanel)
-app.patch("/api/:museumID/:roomID/panel", updateCuratorPanel)
-app.delete("/api/:museumID/:roomID/panel", deleteCuratorPanel)
+app.get("/api/:museumID/:roomID/panel", getCuratorPanels)//
+app.post("/api/:museumID/:roomID/panel", createNewCuratorPanel)//
+app.patch("/api/:museumID/:roomID/panel", updateCuratorPanel)//
+app.delete("/api/:museumID/:roomID/panel", deleteCuratorPanel)//
 
 /* Get Panels from PanelData */
-app.get("/api/:museumID/:roomID/allPanels", getAllPanels)
+app.get("/api/:museumID/:roomID/allPanels", getAllPanels)//
 app.get("/api/:museumID/:roomID/curator/availablePanels", getAvailableCuratorPanels)
 app.get("/api/:museumID/:roomID/community/:accessToken/availablePanels", getAvailableCommunityPanels)
 
-app.get("/api/:museumID/:roomID/panel/:panelID", getPanelByID)
+app.get("/api/:museumID/:roomID/panel/:panelID", getPanelByID)//
 
 /* Creating/Joining Community Sessions */
-app.get("/api/:museumID/community", getCommunitySessions)
-app.post("/api/:museumID/community", createCommunitySession)
-app.delete("/api/:museumID/community", deleteCommunitySession)
-app.post("/api/:museumID/community/join", joinCommunitySession)
+app.get("/api/:museumID/community", getCommunitySessions)//
+app.post("/api/:museumID/community", createCommunitySession)//
+app.delete("/api/:museumID/community", deleteCommunitySession)//
+app.post("/api/:museumID/community/join", joinCommunitySession)//
 
 /* CRUD Functions for Creating Community Panels */
-app.get("/api/:museumID/:roomID/community/:accessToken/panel", getCommunityPanels)
-app.post("/api/:museumID/:roomID/community/:accessToken/panel", createNewCommunityPanel)
+app.get("/api/:museumID/:roomID/community/:accessToken/panel", getCommunityPanels)//
+app.post("/api/:museumID/:roomID/community/:accessToken/panel", createNewCommunityPanel)//
 
 /* Adding or removing drawings */
 app.get("/api/:museumID/:roomID/community/:accessToken/drawing", getDrawingPoint)
@@ -60,7 +60,7 @@ app.post("/api/:museumID/:roomID/community/:accessToken/drawing", addDrawingPoin
 app.delete("/api/:museumID/:roomID/community/:accessToken/drawing/:drawingID", deleteDrawingPoint)
 
 /* Check server is running. Either returns 200 or nothing */
-app.get("/server/health", serverHealthCheck)
+app.get("/server/health", serverHealthCheck)//
 
 app.listen(PORT, () => {
   console.log(`Server running at http://localhost:${PORT}`);
